force-app/main/default/objects/Opportunity/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <description>PGP-0022 - Stores Account Notes here. This field is replica of Account Notes in Account Object.</description>
    <label>Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>