force-app/main/default/objects/Opportunity/fields/File_Count__c.field-meta.xml
<CustomField>
    <fullName>File_Count__c</fullName>
    <description>PGP-0027 - Store associated number of files.</description>
    <label>File Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>