force-app/main/default/objects/Opportunity/fields/Opportunity_Record__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_630, FIND(&quot;/services/&quot;, $Api.Partner_Server_URL_630))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record</label>
    <type>Text</type>
</CustomField>