force-app/main/default/objects/Opportunity/fields/Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value__c</fullName>
    <description>PGP-0012 - Stores potential value</description>
    <label>Potential Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>