force-app/main/default/objects/Opportunity/fields/Send_Follow_Up_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Follow_Up_Emails__c</fullName>
    <formula>DATETIMEVALUE(
  TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp; 
  TEXT(MONTH(TODAY())) &amp; &quot;-&quot; &amp; 
  TEXT(DAY(TODAY())) &amp; &quot; 16:00:00&quot;
) - 
(
  (CASE(
    MOD(DATEVALUE(NOW()) - DATE(1900, 1, 7), 7),
    0, 0,
    1, 0,
    2, 0,
    3, 0,
    4, 0,
    5, 1,
    6, 1,
    0
  ) * 3600) + 
  (8 * 3600)
) / 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Follow Up Emails</label>
    <type>DateTime</type>
</CustomField>